<resources>
    <string name="app_name">Launcher Kiosco TGT</string>
    <string name="retro_antenna_content_description">Antena analizando señal de red</string>
    <string name="main_logo_content_description">Logotipo corporativo TGT</string>
    <string name="main_contact_action_description">Llamar a %1$s</string>
    <string name="main_app_action_description">Abrir aplicación %1$s</string>
    <string name="it_access_lock_content_description">Terminal protegido para acceso IT</string>
    <string name="it_access_show_password">Mostrar contraseña</string>
    <string name="it_access_hide_password">Ocultar contraseña</string>
    <string name="screensaver_logo_content_description">Logotipo corporativo TGT en salvapantallas</string>
    <string name="main_status_wifi_pending">WIFI · --</string>
    <string name="main_status_wifi_ok">WIFI · OK</string>
    <string name="main_status_wifi_no_network">WIFI · SIN RED</string>
    <string name="main_status_wifi_off">WIFI · OFF</string>
    <string name="main_status_internet_pending">INTERNET · --</string>
    <string name="main_status_internet_ok">INTERNET · OK</string>
    <string name="main_status_internet_off">INTERNET · OFF</string>
    <string name="main_status_data_pending">DATOS · --</string>
    <string name="main_status_data_ok">DATOS · OK</string>
    <string name="main_status_data_limited">DATOS · LIMITADOS</string>
    <string name="main_status_data_off">DATOS · OFF</string>
    <string name="main_status_airplane_pending">AVIÓN · --</string>
    <string name="main_status_airplane_on">AVIÓN · ON</string>
    <string name="main_status_airplane_off">AVIÓN · OFF</string>
    <string name="main_status_vowifi_unverified">VOWIFI · NO VERIFICABLE</string>
    <string name="main_status_battery_pending">--%%</string>
    <string name="main_status_battery_value">%1$d%%</string>
    <string name="main_terminal_unassigned">TERMINAL SIN ASIGNAR</string>
    <string name="main_clock_placeholder">00:00:00</string>
    <string name="main_sync_pending">ÚLTIMA SINCRONIZACIÓN · --</string>
    <string name="main_terminal_operational">● TERMINAL OPERATIVO</string>
    <string name="main_terminal_no_internet">● SIN SALIDA A INTERNET</string>
    <string name="main_authorized_accesses">// ACCESOS AUTORIZADOS</string>
    <string name="it_access_title">ACCESO IT</string>
    <string name="it_access_subtitle">AUTORIZACIÓN DE ADMINISTRADOR</string>
    <string name="it_access_warning">TERMINAL SEGURO // CREDENCIAL REQUERIDA</string>
    <string name="it_access_hint">CÓDIGO DE ACCESO</string>
    <string name="screensaver_terminal_placeholder">TERMINAL</string>
    <string name="screensaver_connection_pending">CONEXIÓN · --</string>
    <string name="screensaver_connection_operational">CONEXIÓN · OPERATIVA</string>
    <string name="screensaver_connection_offline">CONEXIÓN · SIN INTERNET</string>
    <string name="screensaver_tap_to_continue">TOCA PARA CONTINUAR</string>
    <string name="call_terminal_header">TGT // TERMINAL DE COMUNICACIONES</string>
    <string name="call_incoming_title">LLAMADA ENTRANTE</string>
    <string name="call_incoming_subtitle">SEÑAL DE VOZ DETECTADA</string>
    <string name="call_state_dialing">CONECTANDO LLAMADA</string>
    <string name="call_state_connected">CONEXIÓN ESTABLECIDA</string>
    <string name="call_signal_bars">|  ||  |||  ||  |</string>
    <string name="call_reject">RECHAZAR</string>
    <string name="call_answer">CONTESTAR</string>
    <string name="call_end">FINALIZAR LLAMADA</string>
    <string name="call_secure_channel">CANAL DE VOZ // CONTROL LOCAL</string>
    <string name="call_incoming_icon_description">Llamada entrante</string>
    <string name="call_active_icon_description">Llamada en curso</string>
</resources>
